# josh_project4

./: .gitignore  azure-vote-all-in-one-redis.yaml  create-cluster.sh  pyproject.toml  setup-script.sh
azure-vote/: .flaskenv  main.py
